--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,10 +8,10 @@
     "dev": "pnpm run typecheck && echo 'Backend serverless - use Vercel preview for testing'",
     "build": "tsc",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint \"api/**/*.ts\" \"api/*/index.ts\"",
-    "lint:fix": "eslint \"api/**/*.ts\" \"api/*/index.ts\" --fix",
-    "format": "prettier --write \"api/**/*.ts\" \"api/*/index.ts\"",
-    "format:check": "prettier --check \"api/**/*.ts\" \"api/*/index.ts\"",
+    "lint": "eslint \"**/*.ts\"",
+    "lint:fix": "eslint \"**/*.ts\" --fix",
+    "format": "prettier --write \"**/*.ts\"",
+    "format:check": "prettier --check \"**/*.ts\"",
     "test": "vitest run",
     "test:watch": "vitest watch"
   },
