Update rewrite rules

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -33,6 +33,10 @@
       "dest": "/summaries/index.ts"
     },
     {
+      "src": "/api/poll",
+      "dest": "/notifications/index.ts"
+    },
+    {
       "src": "/api/notifications/(.*)?",
       "dest": "/notifications/index.ts"
     },
