--- a/apps/worker/Dockerfile.worker
+++ b/apps/worker/Dockerfile.worker
@@ -27,10 +27,5 @@ RUN useradd --create-home --shell /bin/bash appuser && \
 
 USER appuser
 
-EXPOSE 8000
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8000/health', timeout=5)" || exit 1
-
-CMD ["uvicorn", "backend_app:app", "--host", "0.0.0.0", "--port", "8000", "--loop", "asyncio"]
+# Run the async queue worker
+CMD ["python", "main.py"]
