--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -2,10 +2,9 @@ services:
   worker:
     image: ethanturk/python-agents-worker:latest
     pull_policy: always
-    command: ["celery", "-A", "async_tasks", "worker", "--loglevel=info"]
+    command: ["python", "main.py"]
     environment:
       BASE_URL: ${BASE_URL:-192.168.5.204}
-      CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@${BASE_URL}:5672//}  # pragma: allowlist secret
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
@@ -14,7 +13,6 @@ services:
       QDRANT_HOST: ${QDRANT_HOST:-192.168.5.204}
       USE_NNPACK: "0"
       QDRANT_COLLECTION_NAME: ${QDRANT_COLLECTION_NAME:-documents}
-      CELERY_QUEUE_NAME: ${CELERY_QUEUE_NAME:-celery}
       API_URL: ${API_URL}
 
       # Azure Storage Configuration
@@ -25,30 +23,6 @@ services:
       SUPABASE_URL: ${SUPABASE_URL}
       SUPABASE_KEY: ${SUPABASE_KEY}
     restart: unless-stopped
-    depends_on:
-      - rabbitmq
-    networks:
-      - web
-
-  rabbitmq:
-    image: rabbitmq:3.12-management
-    hostname: rabbitmq
-    ports:
-      - "${RABBITMQ_PORT:-5672}:5672"
-      - "${RABBITMQ_MGMT_PORT:-15672}:15672"
-    environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-guest}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS:-guest}
-      RABBITMQ_DEFAULT_VHOST: "/"
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "rabbitmq-diagnostics", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
     networks:
       - web
 
