--- a/.github/workflows/docker-hub-deploy.yml
+++ b/.github/workflows/docker-hub-deploy.yml
@@ -1,16 +1,23 @@
-name: Docker Hub Deploy
+name: Worker Image Deploy
 
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'apps/worker/**'
+      - '.github/workflows/docker-hub-deploy.yml'
   workflow_dispatch:
 
 permissions:
   contents: read
   packages: write
+  id-token: write  # Required for OIDC authentication with Azure
+
+env:
+  WORKER_CONTEXT: ./apps/worker
+  WORKER_DOCKERFILE: ./apps/worker/Dockerfile.worker
 
 jobs:
-  # Deploy worker to Docker Hub
   build-worker:
     runs-on: ubuntu-latest
     steps:
@@ -20,28 +27,73 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Extract metadata
         id: meta
         run: |
           echo "sha=${GITHUB_SHA::8}" >> $GITHUB_OUTPUT
           echo "branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+          echo "date=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
 
-      - name: Build and push worker image
+      # Primary: Deploy to Azure Container Registry (ACI deployment)
+      - name: Login to Azure Container Registry
+        if: ${{ vars.ACR_LOGIN_SERVER != '' }}
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ vars.ACR_LOGIN_SERVER }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+
+      - name: Build and push to ACR
+        if: ${{ vars.ACR_LOGIN_SERVER != '' }}
         uses: docker/build-push-action@v5
         with:
-          context: ./backend
-          file: ./backend/Dockerfile.worker
+          context: ${{ env.WORKER_CONTEXT }}
+          file: ${{ env.WORKER_DOCKERFILE }}
           push: true
           tags: |
-            ethanturk/python-agents-worker:latest
-            ethanturk/python-agents-worker:${{ steps.meta.outputs.sha }}
-            ethanturk/python-agents-worker:${{ steps.meta.outputs.branch }}
+            ${{ vars.ACR_LOGIN_SERVER }}/worker:latest
+            ${{ vars.ACR_LOGIN_SERVER }}/worker:${{ steps.meta.outputs.sha }}
+            ${{ vars.ACR_LOGIN_SERVER }}/worker:${{ steps.meta.outputs.branch }}
+          platforms: linux/amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # Backup: Deploy to Docker Hub (for VPS fallback or public access)
+      - name: Login to Docker Hub
+        if: ${{ secrets.DOCKERHUB_USERNAME != '' }}
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push to Docker Hub
+        if: ${{ secrets.DOCKERHUB_USERNAME != '' }}
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ env.WORKER_CONTEXT }}
+          file: ${{ env.WORKER_DOCKERFILE }}
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/python-agents-worker:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/python-agents-worker:${{ steps.meta.outputs.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/python-agents-worker:${{ steps.meta.outputs.branch }}
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha
-          cache-to: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Summary
+        run: |
+          echo "## Worker Image Deploy Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Commit:** ${{ steps.meta.outputs.sha }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Branch:** ${{ steps.meta.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ -n "${{ vars.ACR_LOGIN_SERVER }}" ]; then
+            echo "### ACR (Primary)" >> $GITHUB_STEP_SUMMARY
+            echo "- \`${{ vars.ACR_LOGIN_SERVER }}/worker:latest\`" >> $GITHUB_STEP_SUMMARY
+            echo "- \`${{ vars.ACR_LOGIN_SERVER }}/worker:${{ steps.meta.outputs.sha }}\`" >> $GITHUB_STEP_SUMMARY
+          fi
+          if [ -n "${{ secrets.DOCKERHUB_USERNAME }}" ]; then
+            echo "### Docker Hub (Backup)" >> $GITHUB_STEP_SUMMARY
+            echo "- \`${{ secrets.DOCKERHUB_USERNAME }}/python-agents-worker:latest\`" >> $GITHUB_STEP_SUMMARY
+          fi
