--- a/apps/worker/Dockerfile
+++ b/apps/worker/Dockerfile
@@ -1,31 +1,43 @@
-FROM python:3.11-slim
+FROM python:3.11-slim AS builder
 
 WORKDIR /app
 
-# Install system dependencies required for Markitdown and various machine learning libraries
-# build-essential for compiling some python packages
-# libgl1 and libglib2.0-0 are often required by cv2/vision libraries used in Markitdown
+# Install build dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
-    libgl1 \
-    libglib2.0-0 \
-    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
-# Upgrade pip to ensure wheel compatibility
+# Upgrade pip
 RUN pip install --upgrade pip
 
-# Install PyTorch CPU-only explicitly to avoid GPU bloat and compilation issues
+# Install PyTorch CPU-only first (smaller than GPU version)
 RUN pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cpu
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy source code before preloading models
+# --- Final stage ---
+FROM python:3.11-slim
+
+WORKDIR /app
+
+# Runtime dependencies only
+RUN apt-get update && apt-get install -y \
+    libgl1 \
+    libglib2.0-0 \
+    ffmpeg \
+    && rm -rf /var/lib/apt/lists/* \
+    && rm -rf /root/.cache
+
+# Copy installed packages from builder
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
+# Copy source code
 COPY . .
 
-# Preload models
-RUN python preload_models.py
+# Preload models (comment out to reduce image size, models download on first use)
+# RUN python preload_models.py
 
 # Run the async queue worker
 CMD ["python", "main.py"]
