--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,16 +12,16 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
-        exclude: ^(k8s/.*\.ya?ml|.*\.bandit)$  # Skip multi-doc K8s manifests and .bandit config (INI format)
+        exclude: ^(k8s/.*\.ya?ml|.*\.bandit)$ # Skip multi-doc K8s manifests and .bandit config (INI format)
       - id: check-json
       - id: check-toml
       - id: check-added-large-files
-        args: ['--maxkb=5000']
+        args: ["--maxkb=5000"]
       - id: check-merge-conflict
       - id: check-case-conflict
       - id: detect-private-key
       - id: mixed-line-ending
-        args: ['--fix=lf']
+        args: ["--fix=lf"]
 
   # Python code formatting (backend)
   - repo: https://github.com/psf/black
@@ -54,7 +54,7 @@ repos:
     rev: 1.7.6
     hooks:
       - id: bandit
-        args: ['-c', 'backend/.bandit', '-r', 'backend/']
+        args: ["-c", "backend/.bandit", "-r", "backend/"]
         files: ^backend/
 
   # Secrets detection (all)
@@ -62,8 +62,8 @@ repos:
     rev: v1.4.0
     hooks:
       - id: detect-secrets
-        args: ['--baseline', '.secrets.baseline']
-        exclude: ^(.*package-lock\.json|.*pnpm-lock\.yaml|.*yarn\.lock|\.env.*|\.secrets\.baseline)$
+        args: ["--baseline", ".secrets.baseline"]
+        exclude: ^(.*package-lock\.json|.*pnpm-lock\.yaml|.*yarn\.lock|\.env.*|\.secrets\.baseline|infra/aci/.*\.json)$
 
   # JavaScript/TypeScript linting (frontend)
   - repo: local
