--- a/infra/aci/logic-app-trigger.json
+++ b/infra/aci/logic-app-trigger.json
@@ -5,7 +5,7 @@
     "_generator": {
       "name": "bicep",
       "version": "0.39.26.7824",
-      "templateHash": "18368041486732142864"
+      "templateHash": "5417779954877762564"
     }
   },
   "parameters": {
@@ -29,42 +29,11 @@
         "description": "Azure Storage connection string"
       }
     },
-    "supabaseUrl": {
-      "type": "string",
-      "metadata": {
-        "description": "Supabase URL"
-      }
-    },
-    "supabaseKey": {
-      "type": "securestring",
-      "metadata": {
-        "description": "Supabase service key"
-      }
-    },
-    "openaiApiKey": {
-      "type": "securestring",
-      "metadata": {
-        "description": "OpenAI API key"
-      }
-    },
-    "internalApiKey": {
-      "type": "securestring",
-      "metadata": {
-        "description": "Internal API key for webhook authentication"
-      }
-    },
     "queueName": {
       "type": "string",
       "defaultValue": "default-tasks",
       "metadata": {
         "description": "Queue name to monitor"
-      }
-    },
-    "azureStorageContainerName": {
-      "type": "string",
-      "defaultValue": "documents",
-      "metadata": {
-        "description": "Azure Storage container name"
       }
     },
     "pollingIntervalSeconds": {
@@ -85,7 +54,9 @@
   "variables": {
     "baseName": "[format('worker-{0}', parameters('environment'))]",
     "acrName": "[replace(format('acr{0}', variables('baseName')), '-', '')]",
-    "logicAppName": "[format('la-{0}-{1}', variables('baseName'), split(parameters('queueName'), '-')[0])]"
+    "logicAppName": "[format('la-{0}-{1}', variables('baseName'), split(parameters('queueName'), '-')[0])]",
+    "keyVaultName": "[format('kv-{0}', parameters('environment'))]",
+    "keyVaultResourceId": "[resourceId('Microsoft.KeyVault/vaults', variables('keyVaultName'))]"
   },
   "resources": [
     {
@@ -225,27 +196,38 @@
                                 },
                                 {
                                   "name": "AZURE_STORAGE_CONNECTION_STRING",
-                                  "secureValue": "[parameters('storageConnectionString')]"
-                                },
-                                {
-                                  "name": "AZURE_STORAGE_CONTAINER_NAME",
-                                  "value": "[parameters('azureStorageContainerName')]"
+                                  "secretReference": {
+                                    "vaultId": "[variables('keyVaultResourceId')]",
+                                    "secretName": "azure-storage-connection-string"
+                                  }
                                 },
                                 {
                                   "name": "SUPABASE_URL",
-                                  "value": "[parameters('supabaseUrl')]"
+                                  "secretReference": {
+                                    "vaultId": "[variables('keyVaultResourceId')]",
+                                    "secretName": "supabase-url"
+                                  }
                                 },
                                 {
                                   "name": "SUPABASE_KEY",
-                                  "secureValue": "[parameters('supabaseKey')]"
+                                  "secretReference": {
+                                    "vaultId": "[variables('keyVaultResourceId')]",
+                                    "secretName": "supabase-key"
+                                  }
                                 },
                                 {
                                   "name": "OPENAI_API_KEY",
-                                  "secureValue": "[parameters('openaiApiKey')]"
+                                  "secretReference": {
+                                    "vaultId": "[variables('keyVaultResourceId')]",
+                                    "secretName": "openai-api-key"
+                                  }
                                 },
                                 {
                                   "name": "INTERNAL_API_KEY",
-                                  "secureValue": "[parameters('internalApiKey')]"
+                                  "secretReference": {
+                                    "vaultId": "[variables('keyVaultResourceId')]",
+                                    "secretName": "internal-api-key"
+                                  }
                                 }
                               ]
                             }
@@ -315,6 +297,20 @@
       },
       "dependsOn": [
         "[resourceId('Microsoft.Logic/workflows', variables('logicAppName'))]"
+      ]
+    },
+    {
+      "type": "Microsoft.Authorization/roleAssignments",
+      "apiVersion": "2022-04-01",
+      "scope": "[format('Microsoft.KeyVault/vaults/{0}', variables('keyVaultName'))]",
+      "name": "[guid(variables('keyVaultResourceId'), resourceId('Microsoft.ManagedIdentity/userAssignedIdentities', format('{0}-acr-pull', variables('logicAppName'))), 'SecretsUser')]",
+      "properties": {
+        "roleDefinitionId": "[subscriptionResourceId('Microsoft.Authorization/roleDefinitions', '4633458b-17de-408a-b874-0445c86b69e6')]",
+        "principalId": "[reference(resourceId('Microsoft.ManagedIdentity/userAssignedIdentities', format('{0}-acr-pull', variables('logicAppName'))), '2023-01-31').principalId]",
+        "principalType": "ServicePrincipal"
+      },
+      "dependsOn": [
+        "[resourceId('Microsoft.ManagedIdentity/userAssignedIdentities', format('{0}-acr-pull', variables('logicAppName')))]"
       ]
     },
     {
