--- a/infra/aci/logic-app-trigger.json
+++ b/infra/aci/logic-app-trigger.json
@@ -5,7 +5,7 @@
     "_generator": {
       "name": "bicep",
       "version": "0.39.26.7824",
-      "templateHash": "1466467361225750716"
+      "templateHash": "13956833076328506658"
     }
   },
   "parameters": {
@@ -21,12 +21,6 @@
       "defaultValue": "[resourceGroup().location]",
       "metadata": {
         "description": "Resource location"
-      }
-    },
-    "storageConnectionString": {
-      "type": "securestring",
-      "metadata": {
-        "description": "Azure Storage connection string (for API connection)"
       }
     },
     "queueName": {
@@ -49,14 +43,26 @@
       "metadata": {
         "description": "Resource group for container instances"
       }
+    },
+    "storageAccountName": {
+      "type": "string",
+      "metadata": {
+        "description": "Storage account name for the queue"
+      }
+    },
+    "keyVaultName": {
+      "type": "string",
+      "metadata": {
+        "description": "Key Vault name"
+      }
     }
   },
   "variables": {
+    "managementHost": "management.azure.com",
     "baseName": "[format('worker-{0}', parameters('environment'))]",
     "acrName": "[replace(format('acr{0}', variables('baseName')), '-', '')]",
     "logicAppName": "[format('la-{0}-{1}', variables('baseName'), split(parameters('queueName'), '-')[0])]",
-    "keyVaultName": "[format('kv-{0}', parameters('environment'))]",
-    "keyVaultResourceId": "[resourceId('Microsoft.KeyVault/vaults', variables('keyVaultName'))]"
+    "keyVaultResourceId": "[resourceId('Microsoft.KeyVault/vaults', parameters('keyVaultName'))]"
   },
   "resources": [
     {
@@ -76,8 +82,8 @@
           "id": "[subscriptionResourceId('Microsoft.Web/locations/managedApis', parameters('location'), 'azurequeues')]"
         },
         "parameterValues": {
-          "storageaccount": "[split(split(parameters('storageConnectionString'), 'AccountName=')[1], ';')[0]]",
-          "sharedkey": "[split(split(parameters('storageConnectionString'), 'AccountKey=')[1], ';')[0]]"
+          "storageaccount": "[format('@Microsoft.KeyVault({0}, storage-account-name)', parameters('keyVaultName'))]",
+          "sharedkey": "[format('@Microsoft.KeyVault({0}, storage-account-key)', parameters('keyVaultName'))]"
         }
       }
     },
@@ -114,7 +120,7 @@
                   }
                 },
                 "method": "get",
-                "path": "[format('/v2/storageAccounts/@{{encodeURIComponent(encodeURIComponent(''{0}''))}}/queues/@{{encodeURIComponent(''{1}'')}}/message_trigger', split(split(parameters('storageConnectionString'), 'AccountName=')[1], ';')[0], parameters('queueName'))]"
+                "path": "[format('/v2/storageAccounts/{0}/queues/{1}/message_trigger', parameters('storageAccountName'), parameters('queueName'))]"
               }
             }
           },
@@ -157,7 +163,7 @@
                   },
                   "inputs": {
                     "method": "PUT",
-                    "uri": "[format('https://management.azure.com/subscriptions/{0}/resourceGroups/{1}/providers/Microsoft.ContainerInstance/containerGroups/worker-@{{guid()}}?api-version=2023-05-01', subscription().subscriptionId, parameters('containerResourceGroup'))]",
+                    "uri": "[format('https://{0}/subscriptions/{1}/resourceGroups/{2}/providers/Microsoft.ContainerInstance/containerGroups/worker-@{{guid()}}?api-version=2023-05-01', variables('managementHost'), subscription().subscriptionId, parameters('containerResourceGroup'))]",
                     "authentication": {
                       "type": "ManagedServiceIdentity"
                     },
@@ -259,7 +265,7 @@
                       }
                     },
                     "method": "delete",
-                    "path": "[format('/v2/storageAccounts/@{{encodeURIComponent(encodeURIComponent(''{0}''))}}/queues/@{{encodeURIComponent(''{1}'')}}/messages/@{{encodeURIComponent(items(''For_Each_Message'')?[''MessageId''])}}', split(split(parameters('storageConnectionString'), 'AccountName=')[1], ';')[0], parameters('queueName'))]",
+                    "path": "[format('/v2/storageAccounts/{0}/queues/{1}/messages/@{{items(''For_Each_Message'')?[''MessageId'']}}', parameters('storageAccountName'), parameters('queueName'))]",
                     "queries": {
                       "popreceipt": "@items('For_Each_Message')?['PopReceipt']"
                     }
@@ -302,7 +308,21 @@
     {
       "type": "Microsoft.Authorization/roleAssignments",
       "apiVersion": "2022-04-01",
-      "scope": "[format('Microsoft.KeyVault/vaults/{0}', variables('keyVaultName'))]",
+      "scope": "[format('Microsoft.KeyVault/vaults/{0}', parameters('keyVaultName'))]",
+      "name": "[guid(variables('keyVaultResourceId'), resourceId('Microsoft.Logic/workflows', variables('logicAppName')), 'SecretsUser')]",
+      "properties": {
+        "roleDefinitionId": "[subscriptionResourceId('Microsoft.Authorization/roleDefinitions', '4633458b-17de-408a-b874-0445c86b69e6')]",
+        "principalId": "[reference(resourceId('Microsoft.Logic/workflows', variables('logicAppName')), '2019-05-01', 'full').identity.principalId]",
+        "principalType": "ServicePrincipal"
+      },
+      "dependsOn": [
+        "[resourceId('Microsoft.Logic/workflows', variables('logicAppName'))]"
+      ]
+    },
+    {
+      "type": "Microsoft.Authorization/roleAssignments",
+      "apiVersion": "2022-04-01",
+      "scope": "[format('Microsoft.KeyVault/vaults/{0}', parameters('keyVaultName'))]",
       "name": "[guid(variables('keyVaultResourceId'), resourceId('Microsoft.ManagedIdentity/userAssignedIdentities', format('{0}-acr-pull', variables('logicAppName'))), 'SecretsUser')]",
       "properties": {
         "roleDefinitionId": "[subscriptionResourceId('Microsoft.Authorization/roleDefinitions', '4633458b-17de-408a-b874-0445c86b69e6')]",
